--- a/01-HTML-CSS/07-SCSS/Etan/style.scss
+++ b/01-HTML-CSS/07-SCSS/Etan/style.scss
@@ -1,26 +1,22 @@
 body {
     background-color: white;
-    margin: 0;
-    padding: 0;
     font-family: sans-serif;
 }
 
 .wrapper {
+    top: 0;
     display: grid;
     position: relative;
-    top: 0;
-    right: 0;
     width: 100vw;
-    height: 100vh;
     background-color: rgb(202, 202, 202);
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-
+    grid-template-columns: repeat(5, 1fr);
+    
     h1 {
+
         position: relative;
         font-size: 5vh;
-        grid-column: span 4;
-        padding-left: 50%;
+        grid-column: span 5;
+        margin: auto;
     }
 
     &__card {
@@ -29,10 +25,11 @@ body {
         color: rgb(0, 0, 0);
         border: 1px solid gray;
         border-radius: 3vw;
-        height: 20vh;
-        width: 15vw;
-        margin: .5vw;
-        float: left;
+        height: 200px;
+        width: 200px;
+        size-adjust: inherit;
+        margin: 30px;
+        z-index: 0;
 
         &:hover {
             cursor: pointer;
@@ -45,13 +42,28 @@ body {
 
         img {
             position: absolute;
-            top: 5vh;
-            left: 0;
             border-radius: 3vw;
             align-items: center;
-            height: 20vh;
-            width: 20vw;
+            width: 100%;
         }
+
+
+
+        #cover {
+            height: 100%;
+            opacity: 1;
+            background-color: rgb(44, 44, 44);
+            z-index: 2;
+
+            &:hover {
+                display: none;
+            }
+        }
+
+        #gif {
+            z-index: 1;
+        }
+
 
         h1 {
             position: absolute;
@@ -60,6 +72,7 @@ body {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 1vw;
             font-weight: 100;
+            z-index: 1;
         }
 
         p {
@@ -69,6 +82,22 @@ body {
             left: 1vw;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 2vh;
+            z-index: 1;
         }
+    }
+    /*media quary*/
+        
+    @media only screen and (max-width: 1533px){
+        grid-template-columns: repeat(4,1fr);
+    }
+    @media only screen and (max-width: 1200px){
+            grid-template-rows: repeat(3,1fr);
+            
+    }
+    @media only screen and (max-width: 800px){
+            grid-template-columns: repeat(2,1fr);
+    }
+    @media only screen and (max-width: 600px){
+            grid-template-columns: repeat(1,1fr);
     }
 }
