--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
@@ -25,7 +25,7 @@ body {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
     border-radius: 20px;
 }
 
@@ -33,6 +33,7 @@ img {
 .wrapper {
     display: grid;
     grid-gap: 20px;
+
 }
 
 // <!-- Nav-bar -->
@@ -76,9 +77,7 @@ img {
     grid-gap: 20px;
     grid-template-areas: 'header header top-box-a''header header top-box-b';
 
-}
-
-.header {
+&__header {
     grid-area: header;
     min-height: 400px;
     background: url(https://media2.giphy.com/media/W05iUdqyFujrRFgnn1/giphy.gif?cid=ecf05e474tadshy6zl4kjhl8w9eji5omjcf5ud46ub7rosv3&rid=giphy.gif&ct=g);
@@ -91,7 +90,7 @@ img {
     justify-content: center;
     box-shadow: 0 1px 5px rgba(54, 54, 54, 0.8);
 
-    &__h1 {
+    h1 {
         font-size: 4rem;
         margin-bottom: 0px;
         color: rgb(255, 249, 249);
@@ -104,7 +103,7 @@ img {
 
     }
 
-    &__p {
+    p {
         font-size: 1.3rem;
         margin-top: 0px;
         color: rgb(255, 249, 249);
@@ -116,27 +115,51 @@ img {
     }
 }
 
-.top-box {
+
+&__top-box {
     color: white;
     display: grid;
     align-items: center;
     justify-items: center;
     box-shadow: 0 1px 5px rgba(54, 54, 54, 0.8);
     padding: 1.5rem;
+    grid-template-areas: 'top-box';
+    
 
     &:hover{
         transform: scale(0.9);
     }
 
-    &__h4 {
+    h4 {
         font-size: 2rem;
     }
 
-    &__price {
+    .price {
         font-size: 2.5rem;
     }
-}
 
+}
+.top-box-a {
+    background-image: url(https://c4.wallpaperflare.com/wallpaper/429/544/56/halo-4-master-chief-wallpaper-preview.jpg);
+    background-repeat: no-repeat;
+    grid-area: 'top-box-a'; 
+    background-size: cover; 
+    &:hover{
+        background-image: url(https://media1.giphy.com/media/UIxpCHRDOFlZKl6HQg/giphy.gif?cid=ecf05e47fwocgwhwrnxiiqc0q1zmqbr89uejgwaf6nd6fo4r&rid=giphy.gif&ct=g);
+    }
+  }
+  
+.top-box-b {
+    grid-area: 'top-box-b';
+    background-image: url(https://wallpapercave.com/wp/wp2619593.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    &:hover{
+        background-image: url(https://media4.giphy.com/media/igylhrJ6n15flClKE3/giphy.gif?cid=ecf05e47mfzpkabegme32v72i70d7wpdk2o6mjwpduj0p90h&rid=giphy.gif&ct=g);
+    }
+  }
+
+}
 // <!-- Devices section -->
 
 .devices {
@@ -195,4 +218,69 @@ footer {
     color: rgb(209, 208, 208);
     text-align: center;
     padding: 1rem;
+}
+
+
+@media only screen and (max-width: 1400px){
+    .top-container {
+        grid-template-areas:
+          'header'
+          'top-box-a'
+          'top-box-b';}
+}
+    
+
+@media only screen and (max-width: 900px){
+    
+    .top-container {
+        grid-template-areas:
+          'header'
+          'top-box-a'
+          'top-box-b';}
+          
+    .nav-bar__list {
+            grid-template-columns: 1fr;
+          }
+
+   
+        
+    .cs-go {
+            grid-template-columns: 1fr;
+          }
+        
+    .cs-go .btn {
+            display: block;
+            text-align: center;
+            margin: auto;
+          }     
+    
+}
+
+@media only screen and (max-width: 600px){
+   
+    .top-container {
+        grid-template-areas:
+          'header'
+          'top-box-a'
+          'top-box-b';}
+
+    .header h1 {
+        font-size: 2.5rem;
+      }
+    
+      .nav-bar__list {
+        grid-template-columns: 1fr;
+      }
+    
+      .cs-go {
+        grid-template-columns: 1fr;
+      }
+    
+      .cs-go .btn {
+        display: block;
+        text-align: center;
+        margin: auto;
+      }
+
+
 }
