--- a/01-HTML-CSS/07-SCSS/marina/marina-GameSite/GameSite.scss
+++ b/01-HTML-CSS/07-SCSS/marina/marina-GameSite/GameSite.scss
@@ -191,6 +191,7 @@ body{
         2px 2px 2px #0a0a0a,
         4px 6px 12px rgba(16, 16, 16, 0.2),
         6px 6px 18px rgba(3, 3, 3, 0.4);
+        
     }
 
     .img {
@@ -200,13 +201,20 @@ body{
        border-radius: 20px;
        transition: all .6s ease;
        
+       
         :hover{
            cursor: pointer;
            opacity: 0.7;
            transform: scale(1.1);
+           
         }
          
     }
+
+    // &__game1>.img:hover{
+    //     background-image: url(img\littlebigsnake.gif);
+    //     opacity: 1;
+    // }
 
     p {
      font-family: 'Source Sans Pro', sans-serif;
