--- a/01-HTML-CSS/07-SCSS/Tal/KheMich/style.scss
+++ b/01-HTML-CSS/07-SCSS/Tal/KheMich/style.scss
@@ -68,13 +68,39 @@
     }
 }
 
+
 .line {
-    position: static;
-    margin-top: 15vh;
-    display: grid;
-    grid-template-columns: repeat(8, 15vw);
-    grid-template-rows: repeat(5, 15vh);
-    gap: 5px;
+    @media only screen and (max-width:2200px) {
+        position: static;
+        margin-top: 15vh;
+        display: grid;
+        grid-template-columns: repeat(8, 12.5vw);
+        grid-template-rows: repeat(5, auto);
+        gap: 5px;
+    }
+
+    @media only screen and (max-width:1600px) {
+
+        position: static;
+        margin-top: 15vh;
+        display: grid;
+        grid-template-columns: repeat(4, 25vw);
+        grid-template-rows: repeat(10, auto);
+        gap: 5px;
+
+    }
+
+    @media only screen and(max-width:900px) {
+        position: static;
+        margin-top: 15vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+        gap: 5px;
+    }
+
+
+
 
     .games {
         background-color: brown;
@@ -89,18 +115,35 @@
 
         .name {
             background-color: darkkhaki;
+
         }
 
 
     }
 
     .big1 {
-        grid-column: 1/3;
-        background-color: cadetblue;
-        grid-row: 1/3;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(8, 1fr);
+        @media only screen and (max-width :2200px) {
+            grid-column: 1/3;
+            background-color: rgb(15, 242, 250);
+            grid-row: 1/3;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(8, 1fr);
+        }
+
+        @media only screen and (max-width:1600px) {
+
+            grid-column: 1/3;
+            grid-row: 1/3;
+            background-color: salmon;
+
+        }
+
+        @media only screen and (max-width:900px) {
+            grid-column: 1/3;
+            grid-row: 1/3;
+            background-color: skyblue;
+        }
 
         .pic {
             grid-row: 1/8;
@@ -112,12 +155,28 @@
     }
 
     .big2 {
-        grid-column: 1/3;
-        grid-row: 4/6;
-        background-color: yellowgreen;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(8, 1fr);
+        @media only screen and(max-width: 2200px) {
+            grid-column: 1/3;
+            grid-row: 4/6;
+            background-color: yellowgreen;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(8, 1fr);
+        }
+
+        @media only screen and (max-width:1600px) {
+
+            grid-column: 1/3;
+            grid-row: 6/8;
+            background-color: seagreen;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(8, 1fr);
+
+        }
+
+
+
 
         .pic {
             grid-row: 1/8;
@@ -128,11 +187,18 @@
         }
     }
 
+
     .empty {
-        grid-row: 3;
-        grid-column: 1/9;
-        background-color: white;
+        @media only screen and(max-width:2200px) {
+            grid-row: 3;
+            grid-column: 1/9;
+            background-color: white;
+        }
+
+        @media only screen and(max-width:1600px) {
+            grid-row: 5;
+            grid-column: 1/5;
+            background-color: silver;
+        }
     }
-
-
 }
