--- a/01-HTML-CSS/09-animations/Andrew/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/style.scss
@@ -14,22 +14,34 @@ body{
 }
 .pic{
     position: absolute;
-    background-image: url(https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg);
     background-size: cover;
     width: 200px;
     height: 200px;
+    transform: translateZ(100px); 
 }
 .a{
     transform:  rotateY(90deg) translateZ(100px); 
+    background-image: url(https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg);
 }
 .b{
     transform:  rotateY(180deg) translateZ(100px); 
+    background-image: url(https://www.wanderlustchloe.com/wp-content/uploads/2020/10/Colosseum-Rome.jpg);
 }
 .c{
-    transform:  rotateY(270deg) translateZ(100px); 
+    transform:  rotateY(270deg) translateZ(100px);
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScuap0j9NJ_IyswVLy53TXaXiMrebuCX03VJe8Yq0a8VQz95d1FfaLc4Z_zKizORMukEo&usqp=CAU); 
 }
 .d{
     transform:  rotateY(0deg) translateZ(100px);
+    background-image: url(https://i0.wp.com/www.montcalmroyallondoncity.co.uk/blog/wp-content/uploads/2017/07/shutterstock_107597459.jpg?fit=1000%2C667&ssl=1);
+}
+.top{
+    transform:  rotatex(90deg) translateZ(100px);
+    background-image: radial-gradient(circle, rgba(113,255,0,1) 0%, rgba(0,228,255,1) 48%, rgba(255,149,0,1) 100%);;
+    &::after{
+        background-image: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
+        transform: rotatex(90deg) translateZ(-200px) ;
+    }
 }
 
 @keyframes rotate {
