--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -7,35 +7,34 @@
     background-color:#dfe6e9;
     .icon{
         position: absolute;
-        left: 15%;
-        top: 4vh;
+        left: 6%;
+        top: 5vh;
         &:hover{
             cursor: pointer;
         }  
     }
     &_text{
         position: relative;
-        top: 4vh;
+        top: 6vh;
         text-align: center;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 50px;
+        font-size: 25px;
     }
 }
 
 .Nav_top{position: relative;
     top:0;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    flex-wrap: wrap;
     width: 100%;
-    height: 10vh;
+    height: 5vh;
     background-color: #dfe6e9;
+    
 
     &_box{position: relative;
         left: 2%;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: xx-large;
+        font-size: 14px;
         width: 19%;
         text-align: center;
         &:hover{
@@ -46,46 +45,115 @@
 }
 
 .plantsGrid{ position: relative;
-    left: 9%;
+    left: 4%;
     width: 85%;
     height: 150vh;
     border: 1px solid black;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(3,1fr);
+    @media only screen and(max-width:75ch) {
+        grid-template-columns: repeat(2, 1fr);
+    }
 
+  
+    &_boxitem{position: relative;
+              border: 1px solid silver;
+              background-size: cover;
 
-    &_boxitem1{
-        border: 1px solid black;
-        background-size: cover;
-        &h1{
-            align-items: center;
-        }
-    }
-    &_boxitem2{
-        border: 1px solid black;
-        background-size: cover;
-    }
-    &_boxitem3{
-        border: 1px solid black;
-     background-size: cover;
-      
-    }
-    &_boxitem4{
-        border: 1px solid black;
-        background-size: cover;
-        
-    }
-    &_boxitem5{
-        border: 1px solid black;
-        background-size: cover;
-        
-    }
-    &_boxitem6{
-        border: 1px solid black;
-        background-size: cover;
+             h1{ position: relative;
+                 left: 15px;
+                color: rgb(21, 33, 56);
+               font-family: 'Comforter Brush', cursive;
+               font-family: 'Inconsolata', monospace;
+               font-family: 'M PLUS Code Latin', sans-serif;
+               font-family: 'Montserrat', sans-serif;
+               font-family: 'Source Code Pro', monospace;
+            }
+            h2{
+                position: relative;
+                 left: 15px;
+                color: rgb(216, 205, 105);
+               font-family: 'Comforter Brush', cursive;
+               font-family: 'Inconsolata', monospace;
+               font-family: 'M PLUS Code Latin', sans-serif;
+               font-family: 'Montserrat', sans-serif;
+               font-family: 'Source Code Pro', monospace;
+
+            }
         
     }
 }
+
+.Nav_bottom{position: relative;
+    top: 0px;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    width: 85%;
+    height: 20vh;
+    &_box1{
+        position: relative;
+        top: 70px;
+        left: 62px;
+        align-items: center;
+        width: 20%;
+        height: 20%;
+        i{
+            position: relative;
+            left: 40%;
+        }
+        &:hover{
+            cursor: pointer;
+        }
+    }
+    &_box2{
+        position: relative;
+        top: 70px;
+        left: 62px;
+        align-items: center;
+        width: 20%;
+        height: 20%;
+        i{
+            position: relative;
+            left: 40%;
+        }
+        &:hover{
+            cursor: pointer;
+        }
+    }
+    &_box3{
+        position: relative;
+        top: 70px;
+        left: 62px;
+        align-items: center;
+        width: 20%;
+        height: 20%;
+        i{
+            position: relative;
+            left: 40%;
+        }
+        &:hover{
+            cursor: pointer;
+        }
+    }
+    &_box4{
+        position: relative;
+        top: 70px;
+        left: 62px;
+        align-items: center;
+        width: 20%;
+        height: 20%;
+        i{
+            position: relative;
+            left: 40%;
+        }
+        &:hover{
+            cursor: pointer;
+        }
+    }
+}
+   
+
 
     
