--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -1,3 +1,6 @@
+@media only screen and(max-width:75ch){
+
+
 .header_categories {
     position: relative;
     top: 0;
@@ -56,15 +59,10 @@
     left: 4%;
     width: 85%;
     height: 150vh;
-    border: 1px solid black;
     display: grid;
     gap: 8px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
-
-    @media only screen and(max-width:75ch) {
-        grid-template-columns: repeat(2, 1fr);
-    }
 
 
     &_boxitem {
@@ -80,6 +78,7 @@
         h1 {
             position: relative;
             left: 15px;
+            font-size: 25px;
             color: rgb(21, 33, 56);
             font-family: 'Comforter Brush', cursive;
             font-family: 'Inconsolata', monospace;
@@ -106,7 +105,7 @@
 .Nav_bottom {
     position: relative;
     top: 0px;
-    left: 0;
+    left: -5%;
     display: flex;
     flex-direction: row;
     width: 85%;
@@ -127,6 +126,8 @@
 
         &:hover {
             cursor: pointer;
+            transform: scale(1.5);
+            transition: 0.7s;
         }
     }
 
@@ -145,6 +146,8 @@
 
         &:hover {
             cursor: pointer;
+            transform: scale(1.5);
+            transition: 0.7s;
         }
     }
 
@@ -159,10 +162,14 @@
         i {
             position: relative;
             left: 40%;
+            transform: scale(1.5);
+            transition: 0.7s;
         }
 
         &:hover {
             cursor: pointer;
+            transform: scale(1.5);
+            transition: 0.7s;
         }
     }
 
@@ -181,8 +188,11 @@
 
         &:hover {
             cursor: pointer;
+            transform: scale(1.5);
+            transition: 0.7s;
         }
     }
+}
 }
 
 
