--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -1,198 +1,198 @@
-@media only screen and(max-width:75ch){
+@media only screen and(max-width:75ch) {
 
 
-.header_categories {
-    position: relative;
-    top: 0;
-    width: 100%;
-    height: 18vh;
-    text-align: center;
-    background-color: #dfe6e9;
-
-    .icon {
-        position: absolute;
-        left: 6%;
-        top: 5vh;
-
-        &:hover {
-            cursor: pointer;
-        }
-    }
-
-    &_text {
+    .header_categories {
         position: relative;
-        top: 6vh;
+        top: 0;
+        width: 100%;
+        height: 18vh;
         text-align: center;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 25px;
-    }
-}
+        background-color: #dfe6e9;
 
-.Nav_top {
-    position: relative;
-    top: 0;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 5vh;
-    background-color: #dfe6e9;
+        .icon {
+            position: absolute;
+            left: 6%;
+            top: 5vh;
 
-
-    &_box {
-        position: relative;
-        left: 2%;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 14px;
-        width: 19%;
-        text-align: center;
-
-        &:hover {
-            cursor: pointer;
-            background-color: #ffeaa7;
-            transform: scale(1.2);
-        }
-    }
-}
-
-.plantsGrid {
-    position: relative;
-    left: 4%;
-    width: 85%;
-    height: 150vh;
-    display: grid;
-    gap: 8px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-
-
-    &_boxitem {
-        position: relative;
-        border: 1px solid silver;
-        background-size: cover;
-
-        &:hover {
-            cursor: pointer;
-            opacity: 0.5;
+            &:hover {
+                cursor: pointer;
+            }
         }
 
-        h1 {
+        &_text {
             position: relative;
-            left: 15px;
+            top: 6vh;
+            text-align: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 25px;
-            color: rgb(21, 33, 56);
-            font-family: 'Comforter Brush', cursive;
-            font-family: 'Inconsolata', monospace;
-            font-family: 'M PLUS Code Latin', sans-serif;
-            font-family: 'Montserrat', sans-serif;
-            font-family: 'Source Code Pro', monospace;
         }
-
-        h2 {
-            position: relative;
-            left: 15px;
-            color: rgb(216, 205, 105);
-            font-family: 'Comforter Brush', cursive;
-            font-family: 'Inconsolata', monospace;
-            font-family: 'M PLUS Code Latin', sans-serif;
-            font-family: 'Montserrat', sans-serif;
-            font-family: 'Source Code Pro', monospace;
-
-        }
-
     }
-}
 
-.Nav_bottom {
-    position: relative;
-    top: 0px;
-    left: -5%;
-    display: flex;
-    flex-direction: row;
-    width: 85%;
-    height: 20vh;
-
-    &_box1 {
+    .Nav_top {
         position: relative;
-        top: 70px;
-        left: 62px;
+        top: 0;
+        display: flex;
         align-items: center;
-        width: 20%;
-        height: 20%;
+        width: 100%;
+        height: 5vh;
+        background-color: #dfe6e9;
 
-        i {
+
+        &_box {
             position: relative;
-            left: 40%;
-        }
+            left: 2%;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 14px;
+            width: 19%;
+            text-align: center;
 
-        &:hover {
-            cursor: pointer;
-            transform: scale(1.5);
-            transition: 0.7s;
+            &:hover {
+                cursor: pointer;
+                background-color: #ffeaa7;
+                transform: scale(1.2);
+            }
         }
     }
 
-    &_box2 {
+    .plantsGrid {
         position: relative;
-        top: 70px;
-        left: 62px;
-        align-items: center;
-        width: 20%;
-        height: 20%;
+        left: 4%;
+        width: 85%;
+        height: 150vh;
+        display: grid;
+        gap: 8px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
 
-        i {
+
+        &_boxitem {
             position: relative;
-            left: 40%;
-        }
+            border: 1px solid silver;
+            background-size: cover;
 
-        &:hover {
-            cursor: pointer;
-            transform: scale(1.5);
-            transition: 0.7s;
+            &:hover {
+                cursor: pointer;
+                opacity: 0.5;
+            }
+
+            h1 {
+                position: relative;
+                left: 15px;
+                font-size: 25px;
+                color: rgb(21, 33, 56);
+                font-family: 'Comforter Brush', cursive;
+                font-family: 'Inconsolata', monospace;
+                font-family: 'M PLUS Code Latin', sans-serif;
+                font-family: 'Montserrat', sans-serif;
+                font-family: 'Source Code Pro', monospace;
+            }
+
+            h2 {
+                position: relative;
+                left: 15px;
+                color: rgb(216, 205, 105);
+                font-family: 'Comforter Brush', cursive;
+                font-family: 'Inconsolata', monospace;
+                font-family: 'M PLUS Code Latin', sans-serif;
+                font-family: 'Montserrat', sans-serif;
+                font-family: 'Source Code Pro', monospace;
+
+            }
+
         }
     }
 
-    &_box3 {
+    .Nav_bottom {
         position: relative;
-        top: 70px;
-        left: 62px;
-        align-items: center;
-        width: 20%;
-        height: 20%;
+        top: 0px;
+        left: -5%;
+        display: flex;
+        flex-direction: row;
+        width: 85%;
+        height: 20vh;
 
-        i {
+        &_box1 {
             position: relative;
-            left: 40%;
-            transform: scale(1.5);
-            transition: 0.7s;
+            top: 70px;
+            left: 62px;
+            align-items: center;
+            width: 20%;
+            height: 20%;
+
+            i {
+                position: relative;
+                left: 40%;
+            }
+
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.5);
+                transition: 0.7s;
+            }
         }
 
-        &:hover {
-            cursor: pointer;
-            transform: scale(1.5);
-            transition: 0.7s;
+        &_box2 {
+            position: relative;
+            top: 70px;
+            left: 62px;
+            align-items: center;
+            width: 20%;
+            height: 20%;
+
+            i {
+                position: relative;
+                left: 40%;
+            }
+
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.5);
+                transition: 0.7s;
+            }
+        }
+
+        &_box3 {
+            position: relative;
+            top: 70px;
+            left: 62px;
+            align-items: center;
+            width: 20%;
+            height: 20%;
+
+            i {
+                position: relative;
+                left: 40%;
+                transform: scale(1.5);
+                transition: 0.7s;
+            }
+
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.5);
+                transition: 0.7s;
+            }
+        }
+
+        &_box4 {
+            position: relative;
+            top: 70px;
+            left: 62px;
+            align-items: center;
+            width: 20%;
+            height: 20%;
+
+            i {
+                position: relative;
+                left: 40%;
+            }
+
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.5);
+                transition: 0.7s;
+            }
         }
     }
-
-    &_box4 {
-        position: relative;
-        top: 70px;
-        left: 62px;
-        align-items: center;
-        width: 20%;
-        height: 20%;
-
-        i {
-            position: relative;
-            left: 40%;
-        }
-
-        &:hover {
-            cursor: pointer;
-            transform: scale(1.5);
-            transition: 0.7s;
-        }
-    }
-}
 }
 
 
@@ -203,9 +203,10 @@
 @media only screen and(max-width:75ch) {
 
 
-    body {
+    .cartPage {
         margin: 0;
         padding: 0;
+        background-color: rgba(160, 156, 152, 0.192);
 
     }
 
@@ -214,37 +215,110 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(4, 20%);
-        border:black 2px solid;
         position: relative;
         left: 8%;
-        width: 85%;
-        height: 100vh;        
+        width: 90%;
+        height: 100vh;
         gap: 10px;
-        
+        background-color: rgba(241, 235, 229, 0.192);
+
 
         &__title {
             margin-top: 5%;
-            color:rgba(0, 0, 0, 0.774);
+            color: rgba(0, 0, 0, 0.774);
             border-radius: 3%;
-            
-            
+
+
         }
 
 
         &__box {
-            background-color: red;
+            background-color: rgb(255, 255, 255);
             border-radius: 3%;
-            box-shadow:2px 2px 10px rgb(70, 70, 70);
+            box-shadow: 2px 2px 10px rgb(75, 71, 71);
+            font-family: sans-serif;
+            color: rgba(0, 0, 0, 0.774);
+
+            &:hover{
+                background-color:rgba(235, 222, 222, 0.76);
+                cursor:pointer;
+            }
+
+        }
+
+        img {
+
+            position: absolute;
+            padding: 1rem;
+
+
+        }
+
+
+
+    }
+
+
+    .leftside {
+
+        position: absolute;
+        left: 7rem;
+
+
+        h3 {
+            opacity: 0.9;
+            margin-bottom: 0px;
+
+        }
+
+        p {
+            font-weight: bold;
+            margin-top: 2%;
+
+            color: rgba(0, 0, 0, 0.774);
+            opacity: 0.6;
+
+        }
+
+        input {
+            width: 3rem;
+            margin-left: 15%;
+            font-weight: bolder;
+
+        }
+
+    }
+
+    .rightside{
+        i{
+            position:absolute;
+            left:23rem;
+            margin-top:1rem;
+            opacity:0.5;
+            &:hover{
+                opacity:1;
+            }
             
+
+        }
+        h3{
+            color:rgb(10, 156, 156);
+            position:absolute;
+            left:20rem;
+            margin-top:100px;
+           
         }
     }
-    
-    
-.checkout{
-    background-color: blueviolet;
-    width:100%;
-    height:70vh;
-}
+
+
+
+
+    .checkout {
+        background-color: rgb(255, 255, 255);
+        width: 100%;
+        height: 70vh;
+
+    }
 
 
 
