--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -23,7 +23,7 @@
             position: relative;
             top: 6vh;
             text-align: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 25px;
         }
     }
@@ -41,7 +41,7 @@
         &_box {
             position: relative;
             left: 2%;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             font-size: 14px;
             width: 19%;
             text-align: center;
