--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
@@ -1,8 +1,3 @@
-:root {
-    opacity: 1;
-}
-
-
 //Andrew Start
 :root{
     --color-dark-grey: #22282c;
@@ -18,9 +13,6 @@
     background-color: var(--color-dark-grey);
     color: var(--color-white);
     font-family: Arial, Helvetica, sans-serif;
-}
-div{
-  //  border: 1px solid red;
 }
 .header{
     display: flex;
@@ -74,16 +66,12 @@ div{
         border: 3px solid var(--color-red);
         border-radius: 50%;
         height: 600px;
-        &:nth-child(){
-            color: var(--color-light-grey);
-        }
-        &:nth-child(2){
-            font-size: 2.5rem;
-        }
-        &:nth-child(3){
-            color: var(--color-light-green);
-        }
+        
+        
     }
+}
+//andrew end
+
 
 //yahya alhawjra-->page exchange
 .wrapperEx{
